# ReRooted

./: .env.example  .gitignore  README.md  media-tool.toml  pyproject.toml  pyrightconfig.json  requirements.txt  rerooted.db
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  events.py  export.py  exports.py  files.py  gedcom.py  imports.py  persons.py  places.py  relationships.py  sources.py  tree.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  event.py  file.py  person.py  person_image.py  place.py  relationship.py  source.py
backend/app/schemas/: __init__.py  event.py  file.py  person.py  place.py  relationship.py  source.py
backend/app/services/: __init__.py  csv_service.py  event_service.py  file_service.py  gedcom_service.py  person_service.py  place_service.py  relationship_service.py  source_service.py  tree_service.py
backend/app/utils/: __init__.py  date_parser.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_sibling_relationship_type.py  0002_person_image_metadata.py  0003_person_contact_fields.py  0004_person_gender_field.py
data/test/: rerooted.test.db
docs/: architecture.md  gui_plan.rnd  project_plan.rnd
docs/backend/: api.md  app.md  db.md  local-db-setup.md
docs/design-decisions/: family-graph-model.md  frontend-state-management.md  frontend-visualization.md  layered-backend.md  persistence-and-interchange.md
docs/frontend/: app.md  person-panel.md  tree-canvas.md  tree-layout-concept.rnd
docs/test/: test_plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts  files.ts  persons.ts  tree.ts
frontend/src/components/: BackgroundPicker.tsx  CanvasSearch.tsx  CanvasToolbar.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  EventTimeline.tsx  ExportPicker.tsx  FlexDateInput.tsx  KeyboardShortcutsHelp.tsx  Lightbox.tsx  LoadingSpinner.tsx  PlaceAutocomplete.tsx  TemplatePicker.tsx  Toast.tsx  ToastContainer.tsx
frontend/src/design/: CustomDesignPanel.tsx  tokens.css
frontend/src/design/templates/: ArcticBlue.ts  ClassicPaper.ts  CustomTemplate.ts  MinimalLight.ts  NightForest.ts  SepiaDusk.ts  SepiaHeritage.ts  index.ts  types.ts
frontend/src/features/persons/: PersonForm.tsx  (+4 more)
frontend/src/hooks/: useCanvasExport.test.tsx  useCanvasExport.ts  useCanvasSearch.ts  useContextMenu.ts  useCreatePerson.ts  useCsvExport.test.tsx  useCsvExport.ts  useCustomDesign.ts  useGedcom.ts  useKeyboardShortcuts.ts  usePerson.ts  usePersonMutations.ts  usePersons.ts  useRelationshipMutations.ts  useTemplate.ts  useToast.ts  useTree.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: ImportPage.tsx  PersonsPage.tsx  TreePage.tsx
frontend/src/utils/: avatarUtils.test.ts  avatarUtils.ts  eventTypes.ts
scripts/: sqlite_query.py
tests/: conftest.py  test_csv_export.py  test_events.py  test_files.py  test_gedcom.py  test_persons.py  test_places.py  test_relationships.py  test_sources.py  test_tree.py
tests/integration/: test_app_foundation.py  test_person_service.py
tests/unit/: test_date_parser.py  test_gedcom_service.py  test_tree_service.py
(+16 files in other folders)
