[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rerooted-workspace"
version = "0.1.0"
description = "Workspace metadata and QA tooling for the ReRooted web-based genealogy application."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ReRooted" }]
keywords = ["genealogy", "family-tree", "fastapi", "react", "vite", "gedcom"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
